--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Force English Microsoft Docs",
     "version": "0.1.0",
-    "description": "An extension to stop Microsoft Docs from being served in something other than US English. Localized MS Docs are often automatically and poorly translated. This extension will force US English Microsoft Docs.",
+    "description": "This extension will force US English Microsoft Docs. Localized MS Docs are often automatically and poorly translated and served by default.",
     "icons": {
         "16": "icons/stopmsdocs16x16.png",
         "32": "icons/stopmsdocs32x32.png",
